Updated descriptions, added message ratelimit

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,49 +74,10 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="about-bio">
-                        <p id="mybio">My name is Jesse Bartola and I am an 18 years old. I am an aspiring software engineer currently attending the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. I grew up around computers, and played many games as a child. Since then I have developed a passion for programming web and mobile applications. I possess an unsual yearning for learning and will spend however long it takes to perfect every skill in my aresenal of knowledge.
+                        <p id="mybio">My name is Jesse Bartola and at 18 years old, I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including websocket chat systems, automated texting services and mobile iPhone applications. 
                         </p>
                     </div>
                 </div>
-                <!-- <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="static/img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="static/img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div> -->
             </div>
         </div>
     </section>
@@ -137,7 +98,9 @@
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Learning</h4>
-                    <p class="text-muted">I can't stress how imporant it is these days to have an ambition for education. I'm always willing to learn new things on my own time and will go out of my way to make sure I am up to date with the latest and most elegant technology.</p>
+                    <p class="text-muted">The importance of an ambition for education, a will to learn, and a drive to tackle new challenges are three pivotal assets that every web developer should carry. Aside from mandatory classes, getting ahead of the curve with self-taught methodologies has tremendously helped me achieve a greater understanding of software and programming. 
+
+                        <!--I can't stress how imporant it is these days to have an ambition for education. I'm always willing to learn new things on my own time and will go out of my way to make sure I am up to date with the latest and most elegant technology.--></p>
                 </div>
                 <div id="skill2" class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -145,7 +108,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Technology</h4>
-                    <p class="text-muted">From calculators to iPhones to computers and beyond, working with technology is and has always been one of my biggest fortes. I am always trying to find the simpleist and most efficient ways to tackle any problems that I may encounter.</p>
+                    <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with such a hard field of study.</p>
                 </div>
                 <div id="skill3" class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -153,7 +116,7 @@
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Active Engagement</h4>
-                    <p class="text-muted">Learning is one thing, but you start to make real progress when you can apply what you've learned to hands-on activites. Because of this, I am always involved in a few projects of my own. Making projects with the material you have learned is a great way to show and further develop your skill set.</p>
+                    <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is imporant, hands-on activies solidy your skill-set which is why I am always involved in multiple outside projects of my own.</p>
                 </div>
             </div>
         </div>
@@ -232,47 +195,15 @@
                     </div>
                 </div>
                 <div id="piediv" class="col-sm-8">
-                    <p id="pietext" class="large text-muted">Throughout my years of programming I have picked up several languages which I believe are essential to creating projects of any kind.</p>
-                    <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming. From jQuery to Sass, I have learned how to craft websites to perfection through my honed skills.</p>
-                    <p id="python" style="display:none;" class="large text-muted">I am quite experienced with the language of Python and have created many websites and applications using Flask.</p>
-                    <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, I have written my fair share of algorithmic programming and desktop applications in Java.</p>
-                    <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. Whatever you need to get done, there's an app for that.</p>
+                    <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different application and uses. </p>
+                    <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
+                    <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding.</p>
+                    <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, my ability to work in Java has enabled me to create a fair share of algorithmic programming and desktop applications.</p>
+                    <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. With this in mind, I have made sure to include this specific type of widely coveted skill in my aresenal. </p>
                     <p id="scala" style="display:none;" class="large text-muted">The introduction to functional programming with Scala has allowed me to explore the in-depth capabilities that programming really has to offer to the world.</p>
-                    
                 </div>
             </div>
             <br/>
-            <!-- <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="static/img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Who</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="static/img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Are</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="static/img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>These people?!?!</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        
-                    </div>
-                </div>
-            </div> -->
-            <!-- <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-                </div>
-            </div> -->
         </div>
     </section>
     
@@ -282,7 +213,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Project inquiries, compliments, and greetings are all accepted!</h3>
+                    <h3 style="color:antiquewhite;" class="section-subheading text-muted">Project inquiries, compliments, and greetings are all accepted!</h3>
                 </div>
             </div>
             <div class="row">
@@ -311,7 +242,6 @@
                             <div class="col-lg-12 text-center">
                                 <div id="success">
                                     <div class="alert alert-danger">
-                                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                                         <strong>Please fill out all of the fields to send a message!</strong>
                                     </div>
                                 </div>
@@ -375,9 +305,9 @@
                             <h2>TxtAdvice (OutFitr)</h2>
                             <p class="item-intro text-muted">Instant fashion advice</p>
                             <img class="img-responsive img-centered" src="static/img/txtadvice.png" alt="">
-                            <p>Ever second-think youself after putting on an outfit before you head out the door? Few people haven't, which is why I decided to become the lead platform developer of TxtAdvice. At any moment a professional stylist is ready to answer any question you might have about your current outfit. Send in a question or a picture and you'll have an answer in no time!</p>
+                            <p>Ever second-guess yourself after putting on an outfit before heading out the door? Many people do which is why as the lead platform developer of TxtAdvice, a small group of collegues and myself have creating an app to allow users to consult a professional stylist no matter what time of day! Send in a question or a picture and you'll have an answer in no time.</p>
                             <p>
-                                <strong>Want to try it out? </strong> Go ahead down to <a href="http://txtadvice.com/">txtadvice.com</a> and enter your phone number in the box!</p>
+                                <!-- <strong>Want to try it out? </strong> Go ahead down to <a href="http://txtadvice.com/">txtadvice.com</a> and enter your phone number in the box!</p> -->
                             <ul class="list-inline">
                                 <li>Date: June 2015</li>
                             </ul>
@@ -405,7 +335,7 @@
                             <h2>Basic Chat</h2>
                             <p class="item-intro text-muted">Portable chat messaging</p>
                             <img class="img-responsive img-centered" src="static/img/basicchat.png" alt="">
-                            <p>Basic Chat is a small project making good use of Node.js and MongoDB. It allows the user to send instant messages to other users that are logged in. The site also tracks analytics for each user that can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features are coming soon.</p>
+                            <p>Basic Chat is a small project which implements both Node.js and MongoDB. It allows the user to send instant messages to contacts that are also logged in. The site also tracks analytics for each user which can be viewed on their profile. Check out the project on <a href="https://github.com/jrbartola/BasicChat">Github</a>! More features to be announced.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
                         </div>
                     </div>
@@ -436,8 +366,7 @@
                             <div class="col-md-6">
                                 <img class="img-responsive img-centered" src="static/img/scopium1.jpg">
                             </div>
-                            
-                            <p>Scopium is a project that is near and dear to my heart. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
+                            <p>Scopium is a project that a couple of friends and I created for Hack Umass. It makes use of little mechanical Arduino sensors which transmit data to an iOS Appplication, helping monitor signs of multiple sclerosis for patients in need. Studies show that patients more aware of their symptoms are more comfortable than patients unaware of sympotoms they may be experiencing. <strong>See more:</strong> <a href="http://devpost.com/software/scopium">Devpost</a>.</p>
                             <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Okay, Cool!</button>
                         </div>
                     </div>
