--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,6 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Welcome To Our Studio!</div> -->
                 <div class="intro-heading">Hi, I'm Jesse</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell me more!</a>
             </div>
@@ -108,7 +107,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Technology</h4>
-                    <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with such a hard field of study.</p>
+                    <p class="text-muted">Technology spans many facets which include calculators, computers and iPhones. An aptitude for all of these devices is an essential part of being succesful when it comes to programming. While always trying to find the most efficient way to tackle projects, I enjoy the challenges that come along with pushing myself past my limits.</p>
                 </div>
                 <div id="skill3" class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -116,7 +115,7 @@
                         <i class="fa fa-gears fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Active Engagement</h4>
-                    <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is imporant, hands-on activies solidy your skill-set which is why I am always involved in multiple outside projects of my own.</p>
+                    <p class="text-muted">While the process of learning a new language or adjusting previous thought processes may seem tedious, the application of such knowledge is crucial. While a thorough education in computer science is important, hands-on activities solidify your skill-set which is why I am always involved in multiple outside projects of my own.</p>
                 </div>
             </div>
         </div>
@@ -277,7 +276,7 @@
                     <ul class="list-inline quicklinks">
                         <li>
                         </li>
-                        <li>You are the {{ visits }}th visitor!
+                        <li>You are visitor # {{ visits }}!
                         </li>
                     </ul>
                 </div>
@@ -415,5 +414,3 @@
 
 </body>
 {% endblock %}
-
-</html>
