Implemented email response

--- a/templates/mailbox.html
+++ b/templates/mailbox.html
@@ -112,6 +112,36 @@
     	</div>
     </section>
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Jesse Bartola 2016</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="mailto:jrbartola@gmail.com"><i class="fa fa-envelope"></i></a>
+                        </li>
+                        <li><a href="http://github.com/jrbartola"><i class="fa fa-github"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/jbartola"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li>
+                        </li>
+                        <li>You are visitor # {{ visits }}!
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- jQuery -->
     <script src="static/js/jquery.js"></script>
 
