Changed profile picture

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,12 +68,12 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-pic">
-                        <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive img-circle" alt="">
+                        <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="about-bio">
-                        <p id="mybio">My name is Jesse Bartola and at 18 years old, I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including websocket chat systems, automated texting services and mobile iPhone applications. 
+                        <p id="mybio">My name is Jesse Bartola and at 18 years old, I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
                         </p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Skill Set</h2>
+                    <h2 class="section-heading">The Breakdown</h2>
                     
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div id="piediv" class="col-sm-8">
-                    <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different application and uses. </p>
+                    <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different applications and uses. </p>
                     <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
                     <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding.</p>
                     <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, my ability to work in Java has enabled me to create a fair share of algorithmic programming and desktop applications.</p>
@@ -401,11 +401,11 @@
     <!-- Swapsies Plugin -->
     <script src="static/js/jquery-swapsies.js"></script>
 
-    <!-- Custom Waypoints -->
-    <script src="static/js/custom_waypoints.js"></script>
-
     <!-- PieChart JavaScript -->
     <script src="static/js/piechart.js"></script>
+
+    <!-- Custom Waypoints -->
+    <script src="static/js/custom_waypoints.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="static/js/agency.js"></script>
