--- a/templates/index.html
+++ b/templates/index.html
@@ -62,12 +62,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-pic">
+                        <h3 class="text-center">See my <a href="static/img/resume.pdf">resume</a>!</h3>
                         <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
                 </div>
