--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
+
     <title>{% block title %}Jesse Bartola{% endblock %}</title>
 
     <!-- Ubuntu Font CSS -->
