Updated resume view

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,13 +67,13 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-pic">
-                        <h3 class="text-center">See my <a href="static/img/resume.pdf">resume</a>!</h3>
+                        <h3 class="text-center">See my <a href="static/img/ResumeFinal.pdf">resume</a>!</h3>
                         <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="about-bio">
-                        <p id="mybio">My name is Jesse Bartola and at 18 years old, I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
+                        <p id="mybio">My name is Jesse Bartola and I am currently an undergraduate student studying Computer Science at the <a href="http://www.umass.edu/">University of Massachusetts, Amherst</a>. Planning on graduating in 2019, I would like to become a software engineer. My passion for programming began at a young age and my focus has never deviated. I have developed many web and mobile interfaces including instant-messaging chat systems, automated texting services and mobile iPhone applications. 
                         </p>
                     </div>
                 </div>
