Reformatted pie chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="about-pic">
-                        <h3 class="text-center">See my <a href="static/img/ResumeFinal.pdf">resume</a>!</h3>
+                        <h3 class="text-center">See my <a href="/resume">resume</a>!</h3>
                         <img src="static/img/facebookprof.jpg" id="prof_pic" class="img-responsive" alt="">
                     </div>
                 </div>
@@ -198,8 +198,8 @@
                     <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
                     <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding.</p>
                     <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, my ability to work in Java has enabled me to create a fair share of algorithmic programming and desktop applications.</p>
-                    <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. With this in mind, I have made sure to include this specific type of widely coveted skill in my aresenal. </p>
                     <p id="scala" style="display:none;" class="large text-muted">The introduction to functional programming with Scala has allowed me to explore the in-depth capabilities that programming really has to offer to the world.</p>
+                    <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. With this in mind, I have made sure to include this specific type of widely coveted skill in my aresenal. </p>
                 </div>
             </div>
             <br/>
