Updated python description/linkdin link

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
                 <div id="piediv" class="col-sm-8">
                     <p id="pietext" class="large text-muted">An understanding of many different languages has helped me throughout the years in creating projects with different applications and uses. </p>
                     <p id="web" style="display:none;" class="large text-muted">Web development is my most proficient area of programming which includes anything from jQuery to Sass. This type of programming is truly the specific area of computer science that I am most passionate about. </p>
-                    <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding.</p>
+                    <p id="python" style="display:none;" class="large text-muted">My experience with the language of Python has enabled me to create many websites and applications using Flask framework as well as standalone scripts to do my bidding. It is a loosely-typed language with a clear, unobstructed syntax which makes it easy to write robust, scalable application scripts.</p>
                     <p id="java" style="display:none;" class="large text-muted">Java was one of the first programming languages I ever learned. Although not my favorite, my ability to work in Java has enabled me to create a fair share of algorithmic programming and desktop applications.</p>
                     <p id="scala" style="display:none;" class="large text-muted">The introduction to functional programming with Scala has allowed me to explore the in-depth capabilities that programming really has to offer to the world.</p>
                     <p id="swift" style="display:none;" class="large text-muted">iPhone application devlopment is at the forefront of today's society. With this in mind, I have made sure to include this specific type of widely coveted skill in my aresenal. </p>
@@ -268,7 +268,7 @@
                         </li>
                         <li><a href="https://www.facebook.com/jbartola"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/jesse-bartola-b56bb5bb"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
