Waypoint update/Resume Update/Styles

--- a/templates/mailbox.html
+++ b/templates/mailbox.html
@@ -126,7 +126,7 @@
                         </li>
                         <li><a href="https://www.facebook.com/jbartola"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/in/jesse-bartola-b56bb5bb"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
                     <ul class="list-inline quicklinks">
                         <li>
                         </li>
-                        <li>You are visitor # {{ visits }}!
+                        <li>You are visitor # {{ visits }} with {{ resumes }} resume views!
                         </li>
                     </ul>
                 </div>
