--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -165,7 +165,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background: linear-gradient(to top, @brand-background, transparent 60%),
+	background: linear-gradient(to top, @brand-background, transparent 30%),
 				url('../img/header-bg.jpg') no-repeat center;
 	.background-cover;
 	text-align: center;
@@ -211,6 +211,10 @@ header {
 			}
 		}
 	}
+
+	section {
+		padding: 150px 0;
+	}
 }
 
 // Global Section Styles
@@ -234,9 +238,7 @@ section {
 }
 
 @media(min-width:768px) {
-	section {
-		padding: 150px 0;
-	}
+	
 }
 
 // Services Section
@@ -330,23 +332,6 @@ section {
 
 #skillset {
     background: linear-gradient(@brand-background, @brand-secondary);
-}
-
-.team-member {
-	text-align: center;
-	margin-bottom: 50px;
-	img {
-		margin: 0 auto;
-		border: 7px solid white;
-	}
-	h4 {
-		margin-top: 25px;
-		margin-bottom: 0;
-		text-transform: none;
-	}
-	p {
-		margin-top: 0;
-	}
 }
 
 // Pie Chart
@@ -653,8 +638,8 @@ body {
 	div {
 		&:hover {
 			cursor: pointer;
-			border-radius: 10%;
-			box-shadow: 10px 10px 20px #222;
+			border-radius: 5px;
+			box-shadow: 3px 3px 5px #222;
 			-webkit-transition: all ease 0.7s;
 		}
 	}
