--- a/static/less/agency.less
+++ b/static/less/agency.less
@@ -165,8 +165,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background: linear-gradient(to top, @brand-background, transparent 30%),
-				url('../img/header-bg.jpg') no-repeat center;
+	//background: linear-gradient(to top, @brand-background, transparent 30%),
+	//			url('../img/header-bg.jpg') no-repeat center;
+	background: url('../img/header-bg.jpg') no-repeat center; 
 	.background-cover;
 	text-align: center;
 	color: white;
