--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header data-type="background" data-speed="4">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">Hi, I'm Jesse</div>
@@ -166,7 +166,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="static/img/iphone_bg_scop.jpg" class="img-responsive" id="scopium_pic" alt="">
+                        <img src="static/img/iphone_bg_scop_smallest.png" class="img-responsive" id="scopium_pic" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Scopium</h4>
