Fixed mailbox footer layout, changed main js name

--- a/templates/index.html
+++ b/templates/index.html
@@ -406,7 +406,7 @@
     <script src="static/js/custom_waypoints.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="static/js/agency.js"></script>
+    <script src="static/js/bartola.js"></script>
 
     
 
