--- a/templates/mailbox.html
+++ b/templates/mailbox.html
@@ -75,21 +75,6 @@
     				</tr>
     				{% endif %}
     				{% endfor %}
-    				<!-- <tr>
-    					<th>10:59 PM</th>
-    					<td>jsmith@gmail.com</td>
-    					<td>Hi! Just checking up to see how you were doing. Hope all is well</td>
-    				</tr>
-    				<tr>
-    					<th>8:12 PM</th>
-    					<td>hole@yahoo.com</td>
-    					<td>What's up? Was seeing if you wanted to work on a project together late. Keep me posted dude!</td>
-    				</tr>
-    				<tr>
-    					<th>5:32 PM</th>
-    					<td>kwest@weezy.org</td>
-    					<td>Whatdup sons</td>
-    				</tr> -->
     			</table>
     		</div>
     		<div class="col-md-6">
@@ -134,7 +119,7 @@
                     <ul class="list-inline quicklinks">
                         <li>
                         </li>
-                        <li>You are visitor # {{ visits }} with {{ resumes }} resume views!
+                        <li>{{ visits }} visitors with {{ resumes }} resume views!
                         </li>
                     </ul>
                 </div>
